Replaced newTab property with target property.  Bumped version to 1.0.1

--- a/demo/index.html
+++ b/demo/index.html
@@ -25,11 +25,9 @@ limitations under the License.
 <body unresolved>
   <template is="dom-bind" id="demo">
     <p>Extractions: [[stringify(extractions)]]</p>
-    <p>New Tab: true</p>
 
     <extraction-grid
-      extractions="[[extractions]]"
-      new-tab>
+      extractions="[[extractions]]">
     </extraction-grid>
   </template>
 
