Added styling for secondary divs.  Bumped version to 1.0.2

--- a/extraction-grid.html
+++ b/extraction-grid.html
@@ -71,6 +71,10 @@ Custom property                            | Description                        
         display: block;
       }
 
+      div[secondary] {
+        color: var(--extraction-grid-label-color, --secondary-text-color);
+      }
+
       .extraction-list {
         font-size: 14px;
         line-height: 25px;
