Changed colors.  Bumped version to 1.0.4

--- a/demo/index.html
+++ b/demo/index.html
@@ -36,6 +36,14 @@ limitations under the License.
       var demo = document.querySelector('#demo');
 
       demo.extractions = [{
+        data: [{
+          icon: 'star',
+          text: 'Extraction with No Name'
+        }]
+      }, {
+        name: 'Extraction with No Data',
+        data: []
+      }, {
         name: 'Next Century',
         data: [{
           confidence: 'high',
