--- a/extraction-grid.html
+++ b/extraction-grid.html
@@ -21,6 +21,7 @@ limitations under the License.
 <link rel="import" href="../iron-icon/iron-icon.html">
 <link rel="import" href="../iron-icons/iron-icons.html">
 <link rel="import" href="../paper-styles/color.html">
+<link rel="import" href="../paper-styles/default-theme.html">
 
 <!--
 A Polymer Element showing a grid of extractions.
@@ -50,14 +51,15 @@ extractions = [{
 
 `<extraction-grid>` provides the following custom properties and mixins for styling:
 
-Custom property                            | Description                            | Default
--------------------------------------------|----------------------------------------|-----------------------
-`--extraction-grid-high-confidence-color`  | The color of the high confidence icon. | --paper-blue-600
-`--extraction-grid-highlighted-text-color` | The color of the highlighted text.     | yellow
-`--extraction-grid-hover-color`            | The color of the label on hover.       | --primary-text-color
-`--extraction-grid-label-color`            | The color of the label.                | --secondary-text-color
-`--extraction-grid-label-mixin`            | Mixin applied to the label.            | {}
-`--extraction-grid-low-confidence-color`   | The color of the low confidence icon.  | --paper-orange-600
+Custom property                            | Description                                 | Default
+-------------------------------------------|---------------------------------------------|-----------------------
+`--extraction-grid-high-confidence-color`  | The color of the high confidence icon.      | --paper-blue-600
+`--extraction-grid-highlighted-text-color` | The color of the highlighted text.          | yellow
+`--extraction-grid-hover-color`            | The color of the extraction label on hover. | --secondary-text-color
+`--extraction-grid-label-color`            | The color of the extraction label.          | --primary-text-color
+`--extraction-grid-label-mixin`            | Mixin applied to the extraction label.      | {}
+`--extraction-grid-low-confidence-color`   | The color of the low confidence icon.       | --paper-orange-600
+`--extraction-grid-title-color`            | The color of the extraction title.          | --secondary-text-color
 
 @demo demo/index.html
 -->
@@ -69,10 +71,6 @@ Custom property                            | Description                        
     <style>
       :host {
         display: block;
-      }
-
-      div[secondary] {
-        color: var(--extraction-grid-label-color, --secondary-text-color);
       }
 
       .extraction-list {
@@ -89,6 +87,14 @@ Custom property                            | Description                        
 
       .extraction-list > div {
         width: 50%;
+      }
+
+      .extraction {
+        margin-bottom: 5px;
+      }
+
+      .extraction-name {
+        color: var(--extraction-grid-title-color, --secondary-text-color);
       }
 
       .confidence-icon {
@@ -112,12 +118,12 @@ Custom property                            | Description                        
         padding: 0 5px;
 
         --icon-label-text: {
-          color: var(--extraction-grid-label-color, --secondary-text-color);
+          color: var(--extraction-grid-label-color, --primary-text-color);
           @apply(--extraction-grid-label-mixin);
         };
 
         --icon-label-link-hover: {
-          color: var(--extraction-grid-hover-color, --primary-text-color);
+          color: var(--extraction-grid-hover-color, --secondary-text-color);
         };
       }
 
@@ -130,6 +136,7 @@ Custom property                            | Description                        
       }
 
       .no-extraction {
+        color: var(--extraction-grid-label-color, --primary-text-color);
         padding: 0 5px;
       }
 
@@ -141,13 +148,9 @@ Custom property                            | Description                        
     <div class="layout horizontal extraction-list wrap">
       <template is="dom-repeat" items="[[extractions]]">
         <div class="layout vertical extraction">
-          <template is="dom-if" if="[[_getProperty(item, nameProperty)]]">
-            <div>
-              <strong>[[_getPropertyAndColon(item, nameProperty)]]</strong>
-            </div>
-          </template>
+          <strong class="extraction-name">[[_getPropertyAndColon(item, nameProperty)]]</strong>
           <template is="dom-if" if="[[!_getLength(item, dataProperty)]]">
-            <div class="no-extraction" secondary>None</div>
+            <div class="no-extraction">None</div>
           </template>
           <template is="dom-if" if="[[_getLength(item, dataProperty)]]">
             <template is="dom-repeat" items="[[_getList(item, dataProperty)]]" as="extraction">
