--- a/extraction-grid.html
+++ b/extraction-grid.html
@@ -75,8 +75,7 @@ Custom property                            | Description                        
 
       .extraction-list {
         font-size: 14px;
-        line-height: 25px;
-        min-height: 25px;
+        line-height: 20px;
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: normal;
@@ -89,17 +88,14 @@ Custom property                            | Description                        
         width: 50%;
       }
 
-      .extraction {
-        margin-bottom: 5px;
-      }
-
       .extraction-name {
         color: var(--extraction-grid-title-color, --secondary-text-color);
+        line-height: 24px;
       }
 
       .confidence-icon {
-        --iron-icon-width: 18px;
-        --iron-icon-height: 18px;
+        --iron-icon-width: 16px;
+        --iron-icon-height: 16px;
         margin-left: 5px;
         margin-right: 5px;
       }
@@ -115,7 +111,7 @@ Custom property                            | Description                        
       icon-label {
         display: inline-block;
         border-radius: 5px;
-        padding: 0 5px;
+        padding: 2px 5px;
 
         --icon-label-text: {
           color: var(--extraction-grid-label-color, --primary-text-color);
@@ -137,7 +133,7 @@ Custom property                            | Description                        
 
       .no-extraction {
         color: var(--extraction-grid-label-color, --primary-text-color);
-        padding: 0 5px;
+        line-height: 24px;
       }
 
       .hide {
@@ -148,25 +144,30 @@ Custom property                            | Description                        
     <div class="layout horizontal extraction-list wrap">
       <template is="dom-repeat" items="[[extractions]]">
         <div class="layout vertical extraction">
-          <strong class="extraction-name">[[_getPropertyAndColon(item, nameProperty)]]</strong>
+          <template is="dom-if" if="[[_getProperty(item, nameProperty)]]">
+            <strong class="extraction-name">[[_getPropertyAndColon(item, nameProperty)]]</strong>
+          </template>
           <template is="dom-if" if="[[!_getLength(item, dataProperty)]]">
             <div class="no-extraction">None</div>
           </template>
           <template is="dom-if" if="[[_getLength(item, dataProperty)]]">
             <template is="dom-repeat" items="[[_getList(item, dataProperty)]]" as="extraction">
               <div class="layout horizontal center extraction-item" secondary>
-                <icon-label class$="[[_getHighlightableLabelStyleClass(extraction, dataHighlightProperty)]]"
-                  title="Open [[_getProperty(extraction, dataTextProperty)]]"
+                <icon-label
+                  class$="[[_getHighlightableLabelStyleClass(extraction, dataHighlightProperty)]]"
+                  title$="Open [[_getProperty(extraction, dataTextProperty)]]"
                   icon="[[_getProperty(extraction, dataIconProperty)]]"
                   icon-style-class="[[_getProperty(extraction, dataStyleClassProperty)]]"
                   link="[[_getProperty(extraction, dataLinkProperty)]]"
                   target="[[target]]"
                   text="[[_getProperty(extraction, dataTextProperty)]]">
                 </icon-label>
-                <iron-icon icon="fa:circle"
-                  class$="confidence-icon [[_getConfidenceStyleClass(extraction, dataConfidenceProperty)]]"
-                  title$="[[_getConfidenceText(extraction, dataConfidenceProperty)]]">
-                </iron-icon>
+                <template is="dom-if" if="[[_getProperty(extraction, dataConfidenceProperty)]]"
+                  <iron-icon icon="fa:circle"
+                    class$="confidence-icon [[_getConfidenceStyleClass(extraction, dataConfidenceProperty)]]"
+                    title$="[[_getConfidenceText(extraction, dataConfidenceProperty)]]">
+                  </iron-icon>
+                </template>
               </div>
             </template>
           </template>
