--- a/extraction-grid.html
+++ b/extraction-grid.html
@@ -93,11 +93,13 @@ Custom property                            | Description                        
         margin-bottom: 5px;
       }
 
+      .extraction-item {
+        margin-bottom: 5px;
+      }
+
       .confidence-icon {
         --iron-icon-width: 16px;
         --iron-icon-height: 16px;
-        margin-left: 5px;
-        margin-right: 5px;
       }
 
       .high-confidence {
@@ -111,7 +113,7 @@ Custom property                            | Description                        
       icon-label {
         display: inline-block;
         border-radius: 5px;
-        margin-bottom: 5px;
+        margin-right: 5px;
 
         --icon-label-text: {
           color: var(--extraction-grid-label-color, --primary-text-color);
