--- a/extraction-grid.html
+++ b/extraction-grid.html
@@ -239,7 +239,7 @@ Custom property                            | Description                        
         /**
          * (Optional)
          *
-         * The confidence property in the data objects from the extraction objects.  Supported confidence values are "high" and "low".
+         * The confidence property in the data objects from the extraction objects.
          *
          * @type {String}
          * @default 'confidence'
