--- a/extraction-grid.html
+++ b/extraction-grid.html
@@ -33,7 +33,7 @@ A Polymer Element showing a grid of extractions.
 extractions = [{
   name: 'Favorite Projects',
   data: [{
-    confidence: 'high',
+    confidence: 100,
     highlight: true,
     icon: 'search',
     link: 'https://github.com/DigElements',
