Added properties.  Bumped version to 1.0.11

--- a/demo/index.html
+++ b/demo/index.html
@@ -24,12 +24,14 @@ limitations under the License.
 
 <body unresolved>
   <template is="dom-bind" id="demo">
-    <p>Result ID: abcd1234</p>
+    <p>Result ID: 1234</p>
+    <p>Result Type: document</p>
     <p>Extractions: [[stringify(extractions)]]</p>
 
     <extraction-grid
       extractions="[[extractions]]"
-      result-id="abcd1234"
+      result-id="1234"
+      result-type="document"
       tag-manager="[[tagManager]]">
     </extraction-grid>
   </template>
