--- a/test/extraction-grid-test.html
+++ b/test/extraction-grid-test.html
@@ -68,7 +68,8 @@ limitations under the License.
             text: 'text6'
           }]
         }];
-        element.resultId = 'abcd1234';
+        element.resultId = '1234';
+        element.resultType = 'document';
         flush(done);
       });
 
@@ -83,10 +84,12 @@ limitations under the License.
         expect(element.dataProvenancesProperty).to.equal('provenances');
         expect(element.dataStyleClassProperty).to.equal('styleClass');
         expect(element.dataTextProperty).to.equal('text');
+        expect(element.dataTypeProperty).to.equal('type');
         expect(element.nameProperty).to.equal('name');
         expect(element.provenanceMethodProperty).to.equal('method');
         expect(element.provenanceTextProperty).to.equal('text');
-        expect(element.resultId).to.equal('abcd1234');
+        expect(element.resultId).to.equal('1234');
+        expect(element.resultType).to.equal('document');
         expect(element.tagManager).to.not.exist;
         expect(element.target).to.equal('_self');
       });
@@ -156,27 +159,27 @@ limitations under the License.
         expect(markers).to.exist;
         expect(markers.length).to.equal(5);
         expect(markers[0].confidence).to.not.exist;
-        expect(markers[0].documentId).to.equal('abcd1234');
+        expect(markers[0].documentId).to.equal('1234');
         expect(markers[0].provenanceMethodProperty).to.equal('method');
         expect(markers[0].provenanceTextProperty).to.equal('text');
         expect(markers[0].provenances).to.not.exist;
         expect(markers[1].confidence).to.not.exist;
-        expect(markers[1].documentId).to.equal('abcd1234');
+        expect(markers[1].documentId).to.equal('1234');
         expect(markers[1].provenanceMethodProperty).to.equal('method');
         expect(markers[1].provenanceTextProperty).to.equal('text');
         expect(markers[1].provenances).to.not.exist;
         expect(markers[2].confidence).to.not.exist;
-        expect(markers[2].documentId).to.equal('abcd1234');
+        expect(markers[2].documentId).to.equal('1234');
         expect(markers[2].provenanceMethodProperty).to.equal('method');
         expect(markers[2].provenanceTextProperty).to.equal('text');
         expect(markers[2].provenances).to.not.exist;
         expect(markers[3].confidence).to.equal(100);
-        expect(markers[3].documentId).to.equal('abcd1234');
+        expect(markers[3].documentId).to.equal('1234');
         expect(markers[3].provenanceMethodProperty).to.equal('method');
         expect(markers[3].provenanceTextProperty).to.equal('text');
         expect(markers[3].provenances).to.not.exist;
         expect(markers[4].confidence).to.equal(50);
-        expect(markers[4].documentId).to.equal('abcd1234');
+        expect(markers[4].documentId).to.equal('1234');
         expect(markers[4].provenanceMethodProperty).to.equal('method');
         expect(markers[4].provenanceTextProperty).to.equal('text');
         expect(markers[4].provenances).to.deep.equal([{
@@ -356,7 +359,8 @@ limitations under the License.
           name: 'name1',
           data: [{
             id: 'id1',
-            text: 'text1'
+            text: 'text1',
+            type: 'type1'
           }]
         }, {
           name: 'name2',
@@ -367,10 +371,12 @@ limitations under the License.
               user: 'positive'
             },
             id: 'id2',
-            text: 'text2'
+            text: 'text2',
+            type: 'type2'
           }]
         }];
-        element.resultId = 'abcd1234';
+        element.resultId = '1234';
+        element.resultType = 'document';
         element.tagManager = {
           addListener: function() {},
           removeListener: function() {},
@@ -384,7 +390,8 @@ limitations under the License.
           name: 'name1',
           data: [{
             id: 'id1',
-            text: 'text1'
+            text: 'text1',
+            type: 'type1'
           }]
         }, {
           name: 'name2',
@@ -395,7 +402,8 @@ limitations under the License.
               user: 'positive'
             },
             id: 'id2',
-            text: 'text2'
+            text: 'text2',
+            type: 'type2'
           }]
         }]);
       });
@@ -405,7 +413,9 @@ limitations under the License.
         expect(buttons).to.exist;
         expect(buttons.length).to.equal(2);
         expect(buttons[0].classification).to.not.exist;
-        expect(buttons[0].entityId).to.equal('abcd1234');
+        expect(buttons[0].entityId).to.equal('1234');
+        expect(buttons[0].entityType).to.equal('document');
+        expect(buttons[0].extractionField).to.equal('type1');
         expect(buttons[0].extractionKey).to.equal('id1');
         expect(buttons[0].tagManager).to.deep.equal(element.tagManager);
         expect(buttons[1].classification).to.deep.equal({
@@ -413,7 +423,9 @@ limitations under the License.
           type: 'type2',
           user: 'positive'
         });
-        expect(buttons[1].entityId).to.equal('abcd1234');
+        expect(buttons[1].entityId).to.equal('1234');
+        expect(buttons[1].entityType).to.equal('document');
+        expect(buttons[1].extractionField).to.equal('type2');
         expect(buttons[1].extractionKey).to.equal('id2');
         expect(buttons[1].tagManager).to.deep.equal(element.tagManager);
       });
